--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
+        "monolog/monolog": "^1.24",
         "predis/predis": "*"
     },
     "require-dev": {
