--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
         "monolog/monolog": "^1.24",
+        "overtrue/laravel-wechat": "^5.0",
         "predis/predis": "*"
     },
     "require-dev": {
