--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "maatwebsite/excel": "^3.1",
         "monolog/monolog": "^1.24",
         "overtrue/laravel-wechat": "^5.0",
-        "predis/predis": "*"
+        "predis/predis": "*",
+        "tymon/jwt-auth": "1.*@rc"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
