--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,18 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.4.0",
+        "elasticsearch/elasticsearch": "^6.8",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.1",
         "monolog/monolog": "^1.24",
         "overtrue/laravel-wechat": "^5.0",
+        "php-amqplib/php-amqplib": "^2.12",
         "predis/predis": "*",
-        "tymon/jwt-auth": "1.*@rc"
+        "tymon/jwt-auth": "1.*@rc",
+        "xingwenge/canal_php": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -61,7 +64,7 @@
     "repositories": {
         "packagist": {
             "type": "composer",
-            "url": "https://packagist.phpcomposer.com"
+            "url": "https://mirrors.aliyun.com/composer/"
         }
     }
 }
